--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       h1 {
         font-family: "Arial Black", Gadget, sans-serif;
         position: absolute;
-
+        font-size: 10rem;
+        margin: 0;
       }
     </style>
 </head>
