--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         justify-content: center;
         height: 95vh;
         align-items: center;
+        flex-wrap: wrap;
+        text-align: center;
       }
       h1 {
         font-family: "Arial Black", Gadget, sans-serif;
@@ -32,7 +34,6 @@
     const adj = adjs[Math.floor(Math.random() * adjs.length)];
 
     appDiv.innerHTML = `<h1>${adj}</h1>`;
-
     </script>
 </body>
 </html>
