--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     }, { id: -1, highterRandomValue: -1 }).id;
 
-    let adj = adjsMap.get(randomAdjId);
+    const adj = adjsMap.get(randomAdjId);
 
     const chance = adj.chance *= CHANCEMULTIPLIER;
     sessionStorage.setItem(randomAdjId, chance);
