--- a/index.html
+++ b/index.html
@@ -2,31 +2,32 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/x-icon" href="/monstro/favicon.ico">
-    <title>Monstro</title>
-    <style>
-      #app {
-        display: flex;
-        justify-content: center;
-        height: 95vh;
-        align-items: center;
-        flex-wrap: wrap;
-        text-align: center;
-      }
-      h1 {
-        font-family: "Arial Black", Gadget, sans-serif;
-        position: absolute;
-        font-size: 10rem;
-        margin: 0;
-      }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" type="image/x-icon" href="/monstro/favicon.ico">
+  <title>Monstro</title>
+  <style>
+    #app {
+      display: flex;
+      justify-content: center;
+      height: 95vh;
+      align-items: center;
+      flex-wrap: wrap;
+      text-align: center;
+    }
+
+    h1 {
+      font-family: "Arial Black", Gadget, sans-serif;
+      position: absolute;
+      font-size: 10rem;
+      margin: 0;
+    }
+  </style>
 </head>
 
 <body>
-  
+
   <div id="app"></div>
   <script>
 
@@ -44,32 +45,78 @@
       'mastodonte', 'coronel', 'canallita', 'champion', 'chulazo', 'truhan', 'maquinola', 'mamotreto', 'mosampo', 'piano de cola'
     ];
 
-    const adjsMap = new Map();
-    adjs.forEach((value, index) => {
-      if (sessionStorage.getItem(index)) {
-        const sessionChance = sessionStorage.getItem(index)
-        return adjsMap.set(index, { value, chance: sessionChance });
-      }
-      return adjsMap.set(index, { value, chance: 1 });
-    });
-
-    const randomAdjId = Array.from(adjsMap.values()).reduce(({ id, highterRandomValue }, item, index) => {
-
-      const currentRandomValue = Math.random() * item.chance * adjsMap.size;
-
-      return currentRandomValue > highterRandomValue
-        ? { id: index, highterRandomValue: currentRandomValue }
-        : { id, highterRandomValue };
-
-    }, { id: -1, highterRandomValue: -1 }).id;
-
+    // Randomize adjs
+    const adjsMap = buildMap(adjs);
+    const randomAdjId = retrieveAdjIdByChance(Array.from(adjsMap.values()));
     const adj = adjsMap.get(randomAdjId);
 
     const chance = adj.chance *= CHANCEMULTIPLIER;
     sessionStorage.setItem(randomAdjId, chance);
 
+    //Randomize backgroundColor
+    const randomBackgroundColor = getRandomBackgroundColor(((randomAdjId + 1)), (chance * 1000));
+    console.warn(randomBackgroundColor);
+
+
+    // Template
     const appDiv = document.getElementById('app');
+    appDiv.style.backgroundColor = randomBackgroundColor;
     appDiv.innerHTML = `<h1>${adj.value}</h1>`;
+
+    // Functions
+    // --------------------------------- //
+    // Adjs
+    function buildMap(adjs) {
+      const adjsMap = new Map();
+      adjs.forEach((value, index) => {
+        const sessionChance = sessionStorage.getItem(index);
+        if (sessionChance) {
+          return adjsMap.set(index, { value, chance: sessionChance });
+        }
+        return adjsMap.set(index, { value, chance: 1 });
+      });
+      return adjsMap;
+    }
+
+    function retrieveAdjIdByChance() {
+      const { id } = Array.from(adjsMap.values()).reduce(({ id, highterRandomValue }, item, index) => {
+
+        const currentRandomValue = Math.random() * item.chance;
+
+        return currentRandomValue > highterRandomValue
+          ? { id: index, highterRandomValue: currentRandomValue }
+          : { id, highterRandomValue };
+
+      }, { id: -1, highterRandomValue: -1 });
+      return id;
+    }
+    // --------------------------------- //
+    // BackgroundColor
+    function getRandomBackgroundColor(id, value) {
+      const hexEquivalent = { 10: 'A', 11: 'B', 12: 'C', 13: 'D', 14: 'E', 15: 'F', };
+      const alphaHexPertentages = ['99', 'A6', 'B3', 'BF', 'CC', 'D9', 'E6'];
+      const divideToHexadecimal = 16;
+      let baseTenNumber = id * value;
+      let remainder = 0;
+      let lightColor = '';
+
+      do {
+        [baseTenNumber, remainder] = [Math.floor(baseTenNumber / divideToHexadecimal), Math.floor(baseTenNumber % divideToHexadecimal)];
+        remainder < 10 ? lightColor += remainder : lightColor += hexEquivalent[remainder];
+      } while (baseTenNumber >= 1 && lightColor.length < 6);
+
+      let sortedValueToHexadecimal = lightColor.split("").reverse().join("");
+      if (sortedValueToHexadecimal.length < 6) {
+        for (let i = sortedValueToHexadecimal.length; i < 6; i++) {
+          sortedValueToHexadecimal += '0';
+        }
+        sortedValueToHexadecimal = Array.from(sortedValueToHexadecimal).sort(() => .5 - Math.random()).toString().replace(/,/g, '');
+      }
+      const randomAlpha = alphaHexPertentages[Math.floor(Math.random() * alphaHexPertentages.length)];
+
+      return `#${sortedValueToHexadecimal}${randomAlpha}`;
+    }
+
   </script>
 </body>
 
