--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     // BackgroundColor
     function getRandomBackgroundColor(id, value) {
       const hexEquivalent = { 10: 'A', 11: 'B', 12: 'C', 13: 'D', 14: 'E', 15: 'F', };
-      const alphaHexPertentages = ['33', '40', '4D', '59', '66', '73', '80', '8C', '99', 'A6', 'B3', 'BF', 'CC'];
+      const alphaHexPertentages = ['73', '80', '8C', '99', 'A6', 'B3', 'BF', 'CC'];
       const divideToHexadecimal = 16;
       let baseTenNumber = id * value;
       let remainder = 0;
