--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     h1 {
       font-family: "Arial Black", Gadget, sans-serif;
       position: absolute;
-      font-size: 10rem;
+      font-size: 12vw;
       margin: 0;
       word-break: break-word;
     }
@@ -211,8 +211,8 @@
     // --------------------------------- //
     // BackgroundColor
     function getRandomBackgroundColor(id, value) {
-      const hexEquivalent = { 10: 'A', 11: 'B', 12: 'C', 13: 'D', 14: 'E', 15: 'F', };
-      const alphaHexPertentages = ['33', '40', '4D', '59', '66', 73', '80', '8C', '99'];
+      const hexEquivalent = { 10: 'A', 11: 'B', 12: 'C', 13: 'D', 14: 'E', 15: 'F' };
+      const alphaHexPertentages = ['33', '40', '4D', '59', '66', '73', '80', '8C', '99'];
       const divideToHexadecimal = 16;
       let baseTenNumber = id * value;
       let remainder = 0;
