--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       'capitán', 'king kong', 'depredador', 'tornado', 'monster truck', 'presa canario', 'johnny bravo', 'mastodonte', 'coronel',
       'canallita', 'chulazo', 'truhán', 'maquinola', 'mamotreto', 'mosampo', 'piano de cola', 'inconmensurable', 'salmonete',
       'sempiterno', 'incesante', 'imperturbable', 'huracán', 'pecho albarda', 'majestuoso', 'mástil', 'ministro', 'baluarte',
-      'alcalde', 'sultán', 'príncipe', 'megalodón', 'boeing 747'
+      'alcalde', 'sultán', 'príncipe', 'megalodón', 'boeing 747', 'inquebrantable', 'destroyer', 'kalasnikov', 'espía ruso'
     ];
 
     // Randomize adjs
