--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       'canallita', 'chulazo', 'truhán', 'maquinola', 'mamotreto', 'mosampo', 'piano de cola', 'inconmensurable', 'salmonete',
       'sempiterno', 'incesante', 'imperturbable', 'huracán', 'pecho albarda', 'majestuoso', 'mástil', 'ministro', 'baluarte',
       'alcalde', 'sultán', 'príncipe', 'megalodón', 'boeing 747', 'inquebrantable', 'destroyer', 'kalasnikov', 'espía ruso',
-      'zigurat'
+      'zigurat', 'pantera'
     ];
 
     // Randomize adjs
