added margin top

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       font-family: "Arial Black", Gadget, sans-serif;
       position: absolute;
       font-size: 3vw;
-      margin: 0;
+      margin-top: -12%;
     }
 
     h1 {
