--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       'canallita', 'chulazo', 'truhán', 'maquinola', 'mamotreto', 'mosampo', 'piano de cola', 'inconmensurable', 'salmonete',
       'sempiterno', 'incesante', 'imperturbable', 'huracán', 'pecho albarda', 'majestuoso', 'mástil', 'ministro', 'baluarte',
       'alcalde', 'sultán', 'príncipe', 'megalodón', 'boeing 747', 'inquebrantable', 'destroyer', 'kalasnikov', 'espía ruso',
-      'zigurat', 'pantera'
+      'zigurat', 'pantera', 'halcón', 'condor', 'armadillo', 'terrateniente', 'latifundista'
     ];
 
     // Randomize adjs
