fix dani's shit

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
     #app {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       height: 100vh;
       align-items: center;
@@ -93,16 +94,12 @@
 
     p {
       font-family: "Arial Black", Gadget, sans-serif;
-      position: absolute;
       font-size: 3vw;
-      margin-top: -12%;
     }
 
     h1 {
       font-family: "Arial Black", Gadget, sans-serif;
-      position: absolute;
       font-size: 12vw;
-      margin: 0;
       word-break: break-word;
     }
 
