--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
       'canallita', 'chulazo', 'truhán', 'maquinola', 'mamotreto', 'mosampo', 'piano de cola', 'inconmensurable', 'salmonete',
       'sempiterno', 'incesante', 'imperturbable', 'huracán', 'pecho albarda', 'majestuoso', 'mástil', 'ministro', 'baluarte',
       'alcalde', 'sultán', 'príncipe', 'megalodón', 'boeing 747', 'inquebrantable', 'destroyer', 'kalasnikov', 'espía ruso',
-      'zigurat', 'pantera', 'halcón', 'condor', 'armadillo', 'terrateniente', 'latifundista', 'tron', 'lince'
+      'zigurat', 'pantera', 'halcón', 'condor', 'armadillo', 'terrateniente', 'latifundista', 'tron', 'lince', 'thanos',
+      'sharknado', 'elfo', 'titán', 'pastelito', 'caballito de mar', 'cogollito', 'machoman', 'malote', 'víbora'
     ];
 
     // Randomize adjs
