--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         dl, dt, dd, ol, ul, li,
         fieldset, form, label, legend,
         table, caption, tbody, tfoot, thead, tr, th, td,
-        article, aside, canvas, details, embed, 
-        figure, figcaption, footer, header, hgroup, 
+        article, aside, canvas, details, embed,
+        figure, figcaption, footer, header, hgroup,
         menu, nav, output, ruby, section, summary,
         time, mark, audio, video {
       margin: 0;
@@ -169,7 +169,7 @@
       'canallita', 'chulazo', 'truhán', 'maquinola', 'mamotreto', 'mosampo', 'piano de cola', 'inconmensurable', 'salmonete',
       'sempiterno', 'incesante', 'imperturbable', 'huracán', 'pecho albarda', 'majestuoso', 'mástil', 'ministro', 'baluarte',
       'alcalde', 'sultán', 'príncipe', 'megalodón', 'boeing 747', 'inquebrantable', 'destroyer', 'kalasnikov', 'espía ruso',
-      'zigurat', 'pantera', 'halcón', 'condor', 'armadillo', 'terrateniente', 'latifundista', 'tron', 'lince'
+      'zigurat', 'pantera', 'halcón', 'condor', 'armadillo', 'terrateniente', 'latifundista', 'tron', 'lince', 'pirámide'
     ];
 
     // Randomize adjs
