fixing unintentional deletion of pirámide

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       'sempiterno', 'incesante', 'imperturbable', 'huracán', 'pecho albarda', 'majestuoso', 'mástil', 'ministro', 'baluarte',
       'alcalde', 'sultán', 'príncipe', 'megalodón', 'boeing 747', 'inquebrantable', 'destroyer', 'kalasnikov', 'espía ruso',
       'zigurat', 'pantera', 'halcón peregrino', 'cóndor', 'armadillo', 'terrateniente', 'latifundista', 'tron', 'lince',
-      'pionero', 'pirata', 'beluga', 'severiano ballesteros', 'pez espada'
+      'pirámide', 'pionero', 'pirata', 'beluga', 'severiano ballesteros', 'pez espada'
     ];
 
     // Randomize adjs
