Remove duplicated adjs and sort in alphabetical order.

--- a/index.html
+++ b/index.html
@@ -158,20 +158,19 @@
     const CHANCEMULTIPLIER = 0.9;
 
     const adjs = [
-      'mostro', 'genio', 'figura', 'tifón', 'capo', 'torero', 'número 1', 'crack', 'mastodonte', 'batería de grupo infantil',
-      'cuádruple bombo', 'ídolo', 'chaval', 'champion', 'referente', 'máquina', 'artista', 'elemento', 'jefe', 'fiera',
-      'maestro', 'socio', 'golfo', 'valiente', 'héroe', 'tanque', 'fenómeno', 'gacela', 'tigre', 'bestia', 'titán', 'gigante',
-      'prenda', 'coloso', 'hacha', 'mostrenco', 'campeón', 'helicóptero', 'killer', 'ciclón', 'pieza', 'brontosaurio', 'vikingo',
-      'vividor', 'crack', 'animal', 'gigante', 'caimán', 'tiranosaurio', 'superman', 'semental', 'ninja', 'genio', 'tsunami',
-      'león', 'terminator', 'goliat', 'terremoto', 'tigre', 'vaquero', 'tanque', 'mole', 'samurai', 'coloso', 'paladín',
-      'willyrex', 'lobezno', 'velociraptor', 'espectro', 'godzilla', 'caza de combate', 'adamantium', 'robocop', 'zeus',
-      'capitán', 'king kong', 'depredador', 'tornado', 'monster truck', 'presa canario', 'johnny bravo', 'mastodonte', 'coronel',
-      'canallita', 'chulazo', 'truhán', 'maquinola', 'mamotreto', 'mosampo', 'piano de cola', 'inconmensurable', 'salmonete',
-      'sempiterno', 'incesante', 'imperturbable', 'huracán', 'pecho albarda', 'majestuoso', 'mástil', 'ministro', 'baluarte',
-      'alcalde', 'sultán', 'príncipe', 'megalodón', 'boeing 747', 'inquebrantable', 'destroyer', 'kalasnikov', 'espía ruso',
-      'zigurat', 'pantera', 'halcón peregrino', 'cóndor', 'armadillo', 'terrateniente', 'latifundista', 'tron', 'lince',
-      'pirámide', 'pionero', 'pirata', 'beluga', 'severiano ballesteros', 'pez espada', 'thanos', 'sharknado', 'elfo',
-      'titán', 'pastelito', 'caballito de mar', 'cogollito', 'machoman', 'malote', 'víbora'
+      'adamantium', 'alcalde', 'animal', 'armadillo', 'artista', 'baluarte', 'batería de grupo infantil', 'beluga', 'bestia', 
+      'boeing 747', 'brontosaurio', 'caballito de mar', 'caimán', 'campeón', 'canallita', 'capitán', 'capo', 'caza de combate', 
+      'champion', 'chaval', 'chulazo', 'ciclón', 'cogollito', 'coloso', 'coronel', 'crack', 'cuádruple bombo', 'cóndor', 
+      'depredador', 'destroyer', 'elemento', 'elfo', 'espectro', 'espía ruso', 'fenómeno', 'fiera', 'figura', 'gacela', 
+      'genio', 'gigante', 'gigante', 'godzilla', 'golfo', 'goliat', 'hacha', 'halcón peregrino', 'helicóptero', 'huracán', 
+      'héroe', 'imperturbable', 'incesante', 'inconmensurable', 'inquebrantable', 'jefe', 'johnny bravo', 'kalasnikov', 'killer', 
+      'king kong', 'latifundista', 'león', 'lince', 'lobezno', 'machoman', 'maestro', 'majestuoso', 'malote', 'mamotreto', 
+      'maquinola', 'mastodonte', 'megalodón', 'ministro', 'mole', 'monster truck', 'mosampo', 'mostrenco', 'mostro', 'máquina', 
+      'mástil', 'ninja', 'número 1', 'paladín', 'pantera', 'pastelito', 'pecho albarda', 'pez espada', 'piano de cola', 'pieza', 
+      'pionero', 'pirata', 'pirámide', 'prenda', 'presa canario', 'príncipe', 'referente', 'robocop', 'salmonete', 'samurai', 
+      'semental', 'sempiterno', 'severiano ballesteros', 'sharknado', 'socio', 'sultán', 'superman', 'tanque', 'terminator', 
+      'terrateniente', 'terremoto', 'thanos', 'tifón', 'tigre', 'tiranosaurio', 'titán', 'torero', 'tornado', 'tron', 'truhán', 
+      'tsunami', 'valiente', 'vaquero', 'velociraptor', 'vikingo', 'vividor', 'víbora', 'willyrex', 'zeus', 'zigurat', 'ídolo'  
     ];
 
     // Randomize adjs
