(TXT) - Change adjetive -ídolo- and put it in right order.

--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
       'champion', 'chaval', 'chulazo', 'ciclón', 'cogollito', 'coloso', 'coronel', 'crack', 'cuádruple bombo', 'cóndor', 
       'depredador', 'destroyer', 'elemento', 'elfo', 'espectro', 'espía ruso', 'fenómeno', 'fiera', 'figura', 'gacela', 
       'genio', 'gigante', 'gigante', 'godzilla', 'golfo', 'goliat', 'hacha', 'halcón peregrino', 'helicóptero', 'huracán', 
-      'héroe', 'imperturbable', 'incesante', 'inconmensurable', 'inquebrantable', 'jefe', 'johnny bravo', 'kalasnikov', 'killer', 
+      'héroe', 'ídolo', 'imperturbable', 'incesante', 'inconmensurable', 'inquebrantable', 'jefe', 'johnny bravo', 'kalasnikov', 'killer', 
       'king kong', 'latifundista', 'león', 'lince', 'lobezno', 'machoman', 'maestro', 'majestuoso', 'malote', 'mamotreto', 
       'maquinola', 'mastodonte', 'megalodón', 'ministro', 'mole', 'monster truck', 'mosampo', 'mostrenco', 'mostro', 'máquina', 
       'mástil', 'ninja', 'número 1', 'paladín', 'pantera', 'pastelito', 'pecho albarda', 'pez espada', 'piano de cola', 'pieza', 
       'pionero', 'pirata', 'pirámide', 'prenda', 'presa canario', 'príncipe', 'referente', 'robocop', 'salmonete', 'samurai', 
       'semental', 'sempiterno', 'severiano ballesteros', 'sharknado', 'socio', 'sultán', 'superman', 'tanque', 'terminator', 
       'terrateniente', 'terremoto', 'thanos', 'tifón', 'tigre', 'tiranosaurio', 'titán', 'torero', 'tornado', 'tron', 'truhán', 
-      'tsunami', 'valiente', 'vaquero', 'velociraptor', 'vikingo', 'vividor', 'víbora', 'willyrex', 'zeus', 'zigurat', 'ídolo'  
+      'tsunami', 'valiente', 'vaquero', 'velociraptor', 'vikingo', 'vividor', 'víbora', 'willyrex', 'zeus', 'zigurat'  
     ];
 
     // Randomize adjs
