(TXT) - Adds some stemming variations from the -crack- family terms.

--- a/index.html
+++ b/index.html
@@ -160,8 +160,9 @@
     const adjs = [
       'adamantium', 'alcalde', 'animal', 'armadillo', 'artista', 'baluarte', 'batería de grupo infantil', 'beluga', 'bestia', 
       'boeing 747', 'brontosaurio', 'caballito de mar', 'caimán', 'campeón', 'canallita', 'capitán', 'capo', 'caza de combate', 
-      'champion', 'chaval', 'chulazo', 'ciclón', 'cogollito', 'coloso', 'coronel', 'crack', 'cuádruple bombo', 'cóndor', 
-      'depredador', 'destroyer', 'elemento', 'elfo', 'espectro', 'espía ruso', 'fenómeno', 'fiera', 'figura', 'gacela', 
+      'champion', 'chaval', 'chulazo', 'ciclón', 'cogollito', 'coloso', 'coronel', 'crack', 'crakesa', 'su crackidad', 'crackerino',
+      'crackoide', 'crackatoa', 'cuádruple bombo', 'cóndor', 'depredador', 'destroyer', 'elemento', 'elfo', 'espectro', 'espía ruso',
+      'fenómeno', 'fiera', 'figura', 'gacela', 
       'genio', 'gigante', 'gigante', 'godzilla', 'golfo', 'goliat', 'hacha', 'halcón peregrino', 'helicóptero', 'huracán', 
       'héroe', 'ídolo', 'imperturbable', 'incesante', 'inconmensurable', 'inquebrantable', 'jefe', 'johnny bravo', 'kalasnikov', 'killer', 
       'king kong', 'latifundista', 'león', 'lince', 'lobezno', 'machoman', 'maestro', 'majestuoso', 'malote', 'mamotreto', 
