(TXT) - Repairs a typo in -crackesa-.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     const adjs = [
       'adamantium', 'alcalde', 'animal', 'armadillo', 'artista', 'baluarte', 'batería de grupo infantil', 'beluga', 'bestia', 
       'boeing 747', 'brontosaurio', 'caballito de mar', 'caimán', 'campeón', 'canallita', 'capitán', 'capo', 'caza de combate', 
-      'champion', 'chaval', 'chulazo', 'ciclón', 'cogollito', 'coloso', 'coronel', 'crack', 'crakesa', 'su crackidad', 'crackerino',
+      'champion', 'chaval', 'chulazo', 'ciclón', 'cogollito', 'coloso', 'coronel', 'crack', 'crackesa', 'su crackidad', 'crackerino',
       'crackoide', 'crackatoa', 'cuádruple bombo', 'cóndor', 'depredador', 'destroyer', 'elemento', 'elfo', 'espectro', 'espía ruso',
       'fenómeno', 'fiera', 'figura', 'gacela', 
       'genio', 'gigante', 'gigante', 'godzilla', 'golfo', 'goliat', 'hacha', 'halcón peregrino', 'helicóptero', 'huracán', 
