Add some adjectives

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
     const CHANCEMULTIPLIER = 0.9;
 
     const adjs = [
-      'adamantium', 'alcalde', 'animal', 'armadillo', 'artista', 'baluarte', 'batería de grupo infantil', 'beluga', 'bestia', 
+      'adamantium', 'alcalde', 'animal', 'armadillo', 'artista', 'baluarte', 'batería de grupo infantil', 'beluga', '
+      ', 
       'boeing 747', 'brontosaurio', 'caballito de mar', 'caimán', 'campeón', 'canallita', 'capitán', 'capo', 'caza de combate', 
       'champion', 'chaval', 'chulazo', 'ciclón', 'cogollito', 'coloso', 'coronel', 'crack', 'cuádruple bombo', 'cóndor', 
       'depredador', 'destroyer', 'elemento', 'elfo', 'espectro', 'espía ruso', 'fenómeno', 'fiera', 'figura', 'gacela', 
@@ -170,7 +171,8 @@
       'pionero', 'pirata', 'pirámide', 'prenda', 'presa canario', 'príncipe', 'referente', 'robocop', 'salmonete', 'samurai', 
       'semental', 'sempiterno', 'severiano ballesteros', 'sharknado', 'socio', 'sultán', 'superman', 'tanque', 'terminator', 
       'terrateniente', 'terremoto', 'thanos', 'tifón', 'tigre', 'tiranosaurio', 'titán', 'torero', 'tornado', 'tron', 'truhán', 
-      'tsunami', 'valiente', 'vaquero', 'velociraptor', 'vikingo', 'vividor', 'víbora', 'willyrex', 'zeus', 'zigurat', 'ídolo'  
+      'tsunami', 'valiente', 'vaquero', 'velociraptor', 'vikingo', 'vividor', 'víbora', 'willyrex', 'zeus', 'zigurat', 'ídolo' 
+      'ciclogénesis explosiva', 'coronavirus', 'COVID-19', 'bestia parda', 'dromedario', 'mamotreto'
     ];
 
     // Randomize adjs
