Add removed adjective

--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
     const CHANCEMULTIPLIER = 0.9;
 
     const adjs = [
-      'adamantium', 'alcalde', 'animal', 'armadillo', 'artista', 'baluarte', 'batería de grupo infantil', 'beluga', '
-      ', 
+      'adamantium', 'alcalde', 'animal', 'armadillo', 'artista', 'baluarte', 'batería de grupo infantil', 'beluga', 'bestia', 
       'boeing 747', 'brontosaurio', 'caballito de mar', 'caimán', 'campeón', 'canallita', 'capitán', 'capo', 'caza de combate', 
       'champion', 'chaval', 'chulazo', 'ciclón', 'cogollito', 'coloso', 'coronel', 'crack', 'cuádruple bombo', 'cóndor', 
       'depredador', 'destroyer', 'elemento', 'elfo', 'espectro', 'espía ruso', 'fenómeno', 'fiera', 'figura', 'gacela', 
