--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       'semental', 'sempiterno', 'severiano ballesteros', 'sharknado', 'socio', 'sultán', 'superman', 'tanque', 'terminator', 
       'terrateniente', 'terremoto', 'thanos', 'tifón', 'tigre', 'tiranosaurio', 'titán', 'torero', 'tornado', 'tron', 'truhán', 
       'tsunami', 'valiente', 'vaquero', 'velociraptor', 'vikingo', 'vividor', 'víbora', 'willyrex', 'zeus', 'zigurat', 'ídolo' 
-      'ciclogénesis explosiva', 'coronavirus', 'COVID-19', 'bestia parda', 'dromedario', 'mamotreto'
+      'ciclogénesis explosiva', 'coronavirus', 'COVID-19', 'bestia parda', 'dromedario'
     ];
 
     // Randomize adjs
